@@ -1,0 +1,4 @@
+
+# Moss - Disable IPv6
+alias net-pf-10 off
+alias ipv6 off
