@@ -73,6 +73,11 @@ readonly INST_DIR='/usr/local/app'
 
 
 ## Network Settings
+# Disable IPv6.
+# 1: Disable IPv6.
+# 0: Enable IPv6.
+readonly IPV6_OFF=1
+
 # The primary NIC (WAN) Name.
 # Example: eth0
 readonly NIC_WAN='eth0'
